# jira-teamlead

./: .coveragerc  .editorconfig  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  search.html
commands/: index.html
configuration/: index.html
docs/: commands.md  configuration.md  index.md  installation.md  jira.md  quickstart.md  roadmap.md  troubleshooting.md
docs/include/admonitions/: autocompletion_note.md  issue_yaml_note.md  password_warning.md  prompt_note.md
docs/include/commands/: config.md  create_issue.md  create_issue_set.md  get_issue.md  search_users.md
docs/js/: fix_table_view.js
docs/mkdocs_macros/: __init__.py
include/admonitions/autocompletion_note/: index.html
include/admonitions/issue_yaml_note/: index.html
installation/: index.html
jira/: index.html
jira_teamlead/: __main__.py  cli.py  config.py  issue_template.py  jira.py  jira_wrapper.py  type_aliases.py
jira_teamlead/cli/: __init__.py  autocompletion.py  config.py  config_options.py  exceptions.py  fallback_options.py  issues_commands.py  jira_options.py  template_options.py  users_commands.py
jira_teamlead/schemas/: issue.json
mkdocs_macros/: __init__.py
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
tests/: test_autocompletion.py  test_cli.py  test_cli_validators.py  test_jira_server.py  test_jira_teamlead.py  test_jira_wrapper.py  test_option_parsers.py
tests/jira_wrapper/: test_create_issue_set.py  test_search_users.py
troubleshooting/: index.html
(+33 files in other folders)
