[tool.poetry]
name = "jira-teamlead"
version = "0.1.0"
description = ""
authors = ["Aleksey Negramotnov <aleksey.negramotnov@nedra.digital>"]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.9.2"
commitizen = "^2.10.0"
flake8 = "^3.8.4"
isort = "^5.6.4"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
